# 3d-air-signature

./: .gitignore  3d_plotter.py  README.md  autorun.py  combine.py  config.yaml  environment.yaml  input_epoch_sample3.npy  input_sample_Tip.npy  input_sample_Tip_Gaussian_-0.5stddev.npy  input_sample_Tip_Gaussian_0.8stddev.npy  loader.py  model.py  next_sample_Tip_Gaussian_-0.5stddev.npy  ntc.py  plot2.py  plot3.py  plot4.py  plot5.py  pyproject.toml  read.py  reconstructed_epoch_sample2.npy  reconstructed_epoch_sample3.npy  reconstructed_epoch_sample3_data.npy  reconstructed_epoch_sampleTest.npy  reconstructed_sample_Tail.npy  reconstructed_sample_Tip.npy  reconstructed_sample_Tip_Gaussian_-0.5stddev.npy  reconstructed_sample_Tip_Gaussian_0.5stddev.npy  reconstructed_sample_Tip_Gaussian_0.8stddev.npy  run.py  test.py  train.py  val_input_sample.npy  val_reconstructed_sample.npy  write.py
Configs/: AigSignsSlitCNN+1StreamLSTM128.yaml  AigSignsSlitCNN+1StreamLSTM256.yaml  AigSignsSlitCNN+2StreamParallelLSTM128.yaml  AigSignsSlitCNN+2StreamParallelLSTM256.yaml  AigSignsSlitCNN+2StreamSequentialLSTM128.yaml  AigSignsSlitCNN+2StreamSequentialLSTM256.yaml  AigSignsSlitCNN+LSTM128.yaml  AigSignsSlitCNN+LSTM256.yaml  AirSignsSlitCNN+1StreamLSTM128Aug.yaml  AirSignsSlitCNN+1StreamLSTM256Aug.yaml  AirSignsSlitCNN+2StreamLSTMParallel256Aug.yaml  AirSignsSlitCNN+2StreamLSTMSequential256Aug.yaml  AirSignsSlitCNN+2StreamParallelLSTM128Aug.yaml  AirSignsSlitCNN+2StreamSequentialLSTM128Aug.yaml  AirSignsSlitCNN+LSTM128Aug.yaml  AirSignsSlitCNN+LSTM256Aug.yaml  (+8 more)
